@@ -16,6 +16,11 @@
                 <configuration>
                     <source>10</source>
                     <target>10</target>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/sun.security.x509=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/sun.security.provider.certpath=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
